--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <div class="form">
                 <div class="form-group">
-                    <label id="txt">Color</label>
+                    <label>Color<div id="box"></div></label>
                     <div class="input-gruop" id="input-gruop">
                         <select>
                             <option value="1" data-id="1">Black</option>
