--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
 
 <body>
 
+     <div class="card-design">
+        <h1>Bills</h1>
+        
+        <button id="closeBtn" class="closeBtn">X</button>
+    </div>
+
     <div class="container">
         <div class="cart-left">
             <div class="main-image">
